03-kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-go
  namespace: echo-go-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: echo-go
  template:
    metadata:
      labels:
        app: echo-go
    spec:
      containers:
      - name: echo-go
        image: lirika13/echo-go:v1
        ports:
        - containerPort: 8000
        livenessProbe:
          httpGet:
            path: /
            port: 8000
          initialDelaySeconds: 3
          periodSeconds: 3
        readinessProbe:
          httpGet:
            path: /
            port: 8000
          initialDelaySeconds: 5
          periodSeconds: 5
      volumeMounts:
        - name: templates
          mountPath: /home/service/templates
      volumes:
      - name: templates
        configMap:
          name: echo-templates
      imagePullSecrets:
      - name: regcred
