03-kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo-go-ingress
  namespace: echo-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: echo-go.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: echo-go-service
            port:
              number: 80
